--- a/front-end/web-app/poollab-web/app/booktable/layout.module.css
+++ b/front-end/web-app/poollab-web/app/booktable/layout.module.css
@@ -447,3 +447,26 @@
   border-radius: 10px;
   color: white;
 }
+
+.add_food_btn {
+  color: #fafafa;
+  background-color: #017d49;
+  padding: 10px 20px;
+  text-align: center;
+  font-weight: 700;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 700;
+  height: auto;
+  margin-right: 20px;
+  width: 30%;
+}
+
+.add_food_btn:hover {
+  background-color: #56c596;
+}
+
+/* Adjust other button widths */
+.stop_btn, .payment_btn {
+  width: 30%;
+}
